# SBBTS

./: .gitignore  GUIDE.md  README.md  THEORY.md  pyproject.toml  requirements.txt  showcase.ipynb  test.ipynb
.github/workflows/: ci.yml
sbbts/: __init__.py  __main__.py
sbbts/benchmarks/: __init__.py  heston.py  rough_volatility.py  sp500.py
sbbts/configs/: default.yaml
sbbts/core/: __init__.py  sbb_solver.py  sbbts_solver.py  score_network.py
sbbts/examples/: augmentation.py  heston_recovery.py
sbbts/nn/: __init__.py  drift_net.py  encoder.py  inverse_net.py  signature_encoder.py
sbbts/tests/: __init__.py  test_brownian_bridge.py  test_heston.py  test_new_features.py  test_sbbts_solver.py  test_transport_map.py
sbbts/transport/: __init__.py  brownian_bridge.py  conditional_ot.py  transport_map.py
sbbts/utils/: __init__.py  dim_reduction.py  early_stopping.py  logger.py  metrics.py  sampling.py  visualization.py
