[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbbts"
version = "0.1.0"
description = "Schrödinger-Bass Bridge for Time Series: A unified framework for synthetic financial time series generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Based on Alouadi et al."},
]
keywords = [
    "sbbts",
    "schrodinger bass bridge",
    "schrodinger bridge",
    "schrodinger-bass bridge",
    "synthetic time series",
    "time series generation",
    "time series augmentation",
    "financial time series",
    "synthetic financial data",
    "generative models",
    "optimal transport",
    "diffusion models",
    "pytorch",
    "quantitative finance",
    "machine learning",
    "data augmentation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
fast = [
    "numba>=0.57.0",
]
all = [
    "sbbts[dev,viz,fast]",
]

[project.scripts]
sbbts = "sbbts.__main__:main"

[project.urls]
Homepage = "https://github.com/JulianoLeperso/sbbts"
Documentation = "https://github.com/JulianoLeperso/sbbts#readme"
Repository = "https://github.com/JulianoLeperso/sbbts"
Issues = "https://github.com/JulianoLeperso/sbbts/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbbts*"]

[tool.setuptools.package-data]
sbbts = ["configs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["sbbts/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
